...
        );
    }

    if (talkView === 'people') {
        return (
            <View style={styles.safeArea}>
                <PageTitle title="Talk" testID="page-title-talk" />
                {talkSwitch}
                <PeopleScreen />
            </View>
        );
    }

...
